Corrige sombra na NavigationBar e delay no autolayout
Para correção do autolayout foram alteradas constraints em:
- RideViewController
- WebViewController

--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1603,24 +1603,23 @@ nenhuma carona.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" allowsInlineMediaPlayback="NO" mediaPlaybackRequiresUserAction="NO" mediaPlaybackAllowsAirPlay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEU-dV-kmf">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="gM5-zO-okd" firstAttribute="top" secondItem="fEU-dV-kmf" secondAttribute="bottom" id="2mE-LJ-6UU"/>
                             <constraint firstAttribute="trailing" secondItem="fEU-dV-kmf" secondAttribute="trailing" id="Q5F-6a-Oh9"/>
                             <constraint firstItem="fEU-dV-kmf" firstAttribute="top" secondItem="tJA-R2-npH" secondAttribute="bottom" id="hhW-EH-QPR"/>
                             <constraint firstItem="fEU-dV-kmf" firstAttribute="leading" secondItem="6Ro-0b-ezE" secondAttribute="leading" id="i7G-sx-fos"/>
+                            <constraint firstAttribute="bottom" secondItem="fEU-dV-kmf" secondAttribute="bottom" id="ohz-on-HvS"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="Q5F-6a-Oh9"/>
                                 <exclude reference="hhW-EH-QPR"/>
                                 <exclude reference="i7G-sx-fos"/>
-                                <exclude reference="2mE-LJ-6UU"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -1628,7 +1627,6 @@ nenhuma carona.</string>
                                 <include reference="Q5F-6a-Oh9"/>
                                 <include reference="hhW-EH-QPR"/>
                                 <include reference="i7G-sx-fos"/>
-                                <include reference="2mE-LJ-6UU"/>
                             </mask>
                         </variation>
                     </view>
@@ -5410,7 +5408,7 @@ FOTO</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T7m-fq-ERe">
-                                <rect key="frame" x="0.0" y="64" width="400" height="1092"/>
+                                <rect key="frame" x="0.0" y="64" width="400" height="1136"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zB7-Ma-qJK" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="400" height="901.5"/>
@@ -6778,7 +6776,7 @@ FOTO</string>
                             <constraint firstItem="T7m-fq-ERe" firstAttribute="top" secondItem="BVv-o5-mz8" secondAttribute="bottom" id="JLd-qv-XpO"/>
                             <constraint firstItem="zB7-Ma-qJK" firstAttribute="width" secondItem="yaI-7v-qLw" secondAttribute="width" id="RIH-rn-Vdv"/>
                             <constraint firstItem="T7m-fq-ERe" firstAttribute="leading" secondItem="yaI-7v-qLw" secondAttribute="leading" id="TZs-Rn-SFL"/>
-                            <constraint firstItem="GiZ-cY-BAp" firstAttribute="top" secondItem="T7m-fq-ERe" secondAttribute="bottom" id="WNu-Js-246"/>
+                            <constraint firstAttribute="bottom" secondItem="T7m-fq-ERe" secondAttribute="bottom" id="cOw-1J-pKk"/>
                             <constraint firstAttribute="trailing" secondItem="T7m-fq-ERe" secondAttribute="trailing" id="qTq-ad-RGX"/>
                         </constraints>
                         <variation key="default">
@@ -6787,7 +6785,6 @@ FOTO</string>
                                 <exclude reference="TZs-Rn-SFL"/>
                                 <exclude reference="qTq-ad-RGX"/>
                                 <exclude reference="RIH-rn-Vdv"/>
-                                <exclude reference="WNu-Js-246"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -6796,7 +6793,6 @@ FOTO</string>
                                 <include reference="TZs-Rn-SFL"/>
                                 <include reference="qTq-ad-RGX"/>
                                 <include reference="RIH-rn-Vdv"/>
-                                <include reference="WNu-Js-246"/>
                             </mask>
                         </variation>
                     </view>
@@ -7150,13 +7146,13 @@ nenhuma carona.</string>
         <image name="menu4" width="25" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="gns-F9-8s8"/>
         <segue reference="emk-CJ-38Y"/>
-        <segue reference="sGI-sp-fNN"/>
         <segue reference="tvA-Ui-5Q1"/>
+        <segue reference="gns-F9-8s8"/>
         <segue reference="9kE-zS-Odm"/>
         <segue reference="H8O-Mc-OH3"/>
         <segue reference="ugX-qh-OjL"/>
+        <segue reference="sGI-sp-fNN"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
