--- a/Caronae/User/WelcomeViewController.xib
+++ b/Caronae/User/WelcomeViewController.xib
@@ -14,12 +14,10 @@
             <connections>
                 <outlet property="titleLabel" destination="KpI-My-jqy" id="Ldw-wh-wEy"/>
                 <outlet property="view" destination="ogs-MZ-Dj3" id="JJJ-oa-Gox"/>
+                <outlet property="welcomeImage" destination="RNd-mU-9Zf" id="ZWl-Rq-e6j"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="4kU-VL-gVM" customClass="WelcomeViewController" customModule="Caronae" customModuleProvider="target">
-            <point key="canvasLocation" x="334" y="43"/>
-        </viewController>
         <view contentMode="scaleToFill" id="ogs-MZ-Dj3">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,42 +30,52 @@
                     </view>
                     <blurEffect style="extraLight"/>
                 </visualEffectView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mt0-cg-cZQ" userLabel="Content View">
-                    <rect key="frame" x="42" y="199.5" width="291" height="267.5"/>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mt0-cg-cZQ" userLabel="Content View">
+                    <rect key="frame" x="43" y="129.5" width="291" height="408"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Olá, Fulano!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KpI-My-jqy">
-                            <rect key="frame" x="60" y="20" width="162" height="36"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Olá, Fulano!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KpI-My-jqy">
+                            <rect key="frame" x="67" y="30" width="162" height="36"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                             <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Welcome" translatesAutoresizingMaskIntoConstraints="NO" id="RNd-mU-9Zf">
+                            <rect key="frame" x="115" y="101" width="62" height="100"/>
+                            <color key="tintColor" red="0.090196078430000007" green="0.69803921570000005" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="62" id="bpO-ug-hlM"/>
+                                <constraint firstAttribute="height" constant="100" id="q5b-dH-0fX"/>
+                            </constraints>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vlB-1g-q4d">
-                            <rect key="frame" x="0.0" y="86" width="291" height="81.5"/>
+                            <rect key="frame" x="0.0" y="236" width="291" height="81.5"/>
                             <string key="text">Parece que esta é a primeira vez que você usa o Caronaê.
 Para continuar, por favor complete seu perfil. </string>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QnD-ey-bM3">
-                            <rect key="frame" x="105" y="218" width="67" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QnD-ey-bM3">
+                            <rect key="frame" x="112" y="367.5" width="67" height="30"/>
                             <state key="normal" title="Continuar">
-                                <color key="titleColor" red="0.1137254909" green="0.6549019814" blue="0.36470589040000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleColor" red="0.12549020350000001" green="0.14509804549999999" blue="0.46666666870000001" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <connections>
-                                <action selector="continueTapped" destination="4kU-VL-gVM" eventType="touchUpInside" id="d6V-gq-8n2"/>
+                                <action selector="continueTapped" destination="-1" eventType="touchUpInside" id="b5E-lN-QDa"/>
                             </connections>
                         </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="vlB-1g-q4d" firstAttribute="top" secondItem="KpI-My-jqy" secondAttribute="bottom" constant="30" id="4FR-jt-j99"/>
+                        <constraint firstItem="RNd-mU-9Zf" firstAttribute="top" secondItem="KpI-My-jqy" secondAttribute="bottom" constant="35" id="I1F-Ki-Vey"/>
                         <constraint firstItem="QnD-ey-bM3" firstAttribute="centerX" secondItem="Mt0-cg-cZQ" secondAttribute="centerX" id="I4x-Cq-DNX"/>
-                        <constraint firstItem="KpI-My-jqy" firstAttribute="top" secondItem="Mt0-cg-cZQ" secondAttribute="top" constant="20" id="L6J-QC-bQT"/>
-                        <constraint firstAttribute="bottom" secondItem="QnD-ey-bM3" secondAttribute="bottom" constant="20" id="MXx-5H-njG"/>
+                        <constraint firstItem="KpI-My-jqy" firstAttribute="top" secondItem="Mt0-cg-cZQ" secondAttribute="top" constant="30" id="L6J-QC-bQT"/>
+                        <constraint firstAttribute="bottom" secondItem="QnD-ey-bM3" secondAttribute="bottom" id="MXx-5H-njG"/>
                         <constraint firstItem="QnD-ey-bM3" firstAttribute="top" secondItem="vlB-1g-q4d" secondAttribute="bottom" constant="50" id="Ouf-rl-Cgu"/>
+                        <constraint firstItem="vlB-1g-q4d" firstAttribute="top" secondItem="RNd-mU-9Zf" secondAttribute="bottom" constant="35" id="PPe-MY-pCZ"/>
                         <constraint firstAttribute="trailing" secondItem="vlB-1g-q4d" secondAttribute="trailing" id="SZW-T7-Eyp"/>
                         <constraint firstItem="KpI-My-jqy" firstAttribute="centerX" secondItem="Mt0-cg-cZQ" secondAttribute="centerX" constant="2.25" id="Tga-Mo-F01"/>
                         <constraint firstItem="vlB-1g-q4d" firstAttribute="leading" secondItem="Mt0-cg-cZQ" secondAttribute="leading" id="e1L-d4-tyL"/>
+                        <constraint firstItem="RNd-mU-9Zf" firstAttribute="centerX" secondItem="Mt0-cg-cZQ" secondAttribute="centerX" id="eLg-wX-kCJ"/>
                     </constraints>
                 </view>
             </subviews>
@@ -83,6 +91,10 @@ Para continuar, por favor complete seu perfil. </string>
                 <constraint firstItem="NF4-cD-hRe" firstAttribute="leading" secondItem="ogs-MZ-Dj3" secondAttribute="leading" id="jiu-9p-4WI"/>
                 <constraint firstItem="Mt0-cg-cZQ" firstAttribute="leading" secondItem="ogs-MZ-Dj3" secondAttribute="leadingMargin" constant="34" id="sOA-fS-LEW"/>
             </constraints>
+            <point key="canvasLocation" x="35.5" y="54.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="Welcome" width="56" height="89"/>
+    </resources>
 </document>
